[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/ExoBoldItalic-VdrB.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Mirage-ZEzz.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/scripts/DeathScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/click_track.mp3" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/hover_tracktrack.mp3" type="AudioStream" id=5]

[sub_resource type="Shader" id=3]
code = "shader_type canvas_item;

uniform float blur: hint_range(0.0, 2.5);
uniform float brightness: hint_range(0.0, 1.0);

void fragment() {
	COLOR = textureLod(SCREEN_TEXTURE, SCREEN_UV, blur);
	COLOR.rgb *= brightness;
}"

[sub_resource type="ShaderMaterial" id=4]
shader = SubResource( 3 )
shader_param/blur = 0.0
shader_param/brightness = 1.0

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "GameOver"
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 1.0, 0.7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ 0.0, 2.5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/brightness")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "hide"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CenterContainer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:material:shader_param/blur")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:material:shader_param/brightness")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 1.0 ]
}

[node name="DeathScreen" type="ColorRect"]
pause_mode = 2
material = SubResource( 4 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 427.0
margin_top = 256.0
margin_right = 939.0
margin_bottom = 512.0
rect_min_size = Vector2( 512, 256 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 505.0
margin_bottom = 249.0
custom_constants/margin_right = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
margin_left = 16.0
margin_right = 482.0
margin_bottom = 226.0
custom_constants/separation = 5

[node name="DeathTitle" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 466.0
margin_bottom = 71.0
custom_fonts/font = SubResource( 1 )
text = "Fim de jogo"
align = 1
valign = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 466.0
margin_bottom = 80.0

[node name="TryAgainButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 85.0
margin_right = 466.0
margin_bottom = 153.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Tentar novamente"

[node name="QuitDeathButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 158.0
margin_right = 466.0
margin_bottom = 226.0
focus_mode = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "Sair"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/GameOver = SubResource( 5 )
anims/RESET = SubResource( 6 )
anims/hide = SubResource( 7 )

[node name="HoverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ClickSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="button_down" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TryAgainButton" to="." method="_on_Button_click"]
[connection signal="button_up" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TryAgainButton" to="." method="_on_TryAgainButton_button_up"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/TryAgainButton" to="." method="_on_Button_hover"]
[connection signal="button_down" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitDeathButton" to="." method="_on_Button_click"]
[connection signal="button_up" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitDeathButton" to="." method="_on_QuitDeathButton_button_up"]
[connection signal="mouse_entered" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitDeathButton" to="." method="_on_Button_hover"]
